# rustic_hal

./: .gitignore  CNAME  CONTRIBUTORS.md  Cargo.toml  README.md  aliases.js  build.rs  index.html  params.json  search-index.js  source-files.js
benches/: simple_serialisation.rs
dtoa/: fn.write.html  index.html  macro.diyfp.html  macro.dtoa.html  trait.Floating.html
itoa/: fn.write.html  index.html  trait.Integer.html
quote/: index.html  macro.quote.html  sidebar-items.js  struct.ByteStr.html  struct.Tokens.html  trait.ToTokens.html
rustic_hal/: all.html  index.html  sidebar-items.js
rustic_hal/error/: HalError.t.html  HalResult.t.html  enum.HalError.html  index.html  sidebar-items.js  type.HalResult.html
rustic_hal/link/: HalLink.t.html  index.html  sidebar-items.js  struct.HalLink.html
rustic_hal/resource/: HalResource.t.html  HalResources.t.html  OneOrMany.t.html  enum.HalResources.html  index.html  sidebar-items.js  struct.HalResource.html  struct.OneOrMany.html
serde/: index.html  macro.forward_to_deserialize.html
serde/bytes/: index.html  struct.ByteBuf.html  struct.ByteBufVisitor.html  struct.Bytes.html
serde/de/: enum.Type.html  index.html  trait.Deserialize.html  trait.Deserializer.html  (+6 more)
serde_codegen/: expand_single_item.v.html  fn.expand_single_item.html  fn.register.html  index.html  sidebar-items.js
serde_codegen_internals/: index.html  struct.Ctxt.html
serde_derive/: fn.derive_deserialize.html  fn.derive_serialize.html  index.html
serde_json/: index.html
src/: error.rs  lib.rs  link.rs  macros.rs  resource.rs
syn/: enum.AttrStyle.html  enum.BinOp.html  enum.Body.html  enum.ConstExpr.html  enum.FloatTy.html  enum.FunctionRetTy.html  enum.IntTy.html  enum.Lit.html  enum.MetaItem.html  enum.Mutability.html  enum.PathParameters.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Ty.html  enum.TyParamBound.html  enum.UnOp.html  enum.VariantData.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse_macro_input.html  fn.parse_path.html  fn.parse_type.html  fn.parse_where_clause.html  index.html  macro.walk_list.html  sidebar-items.js  struct.AngleBracketedParameterData.html  struct.Attribute.html  struct.BareFnArg.html  struct.BareFnTy.html  struct.Field.html  struct.Generics.html  struct.Ident.html  struct.Lifetime.html  struct.LifetimeDef.html  struct.MacroInput.html  struct.MutTy.html  struct.ParenthesizedParameterData.html  struct.Path.html  struct.PathSegment.html  (+8 more)
unicode_xid/: constant.UNICODE_VERSION.html  index.html  trait.UnicodeXID.html
(+400 files in other folders)
