[package]
name = "rustic_hal"
version = "0.2.0"
authors = ["Philippe Duval <philippe@duvalsoft.org>"]
license = "MIT/Apache-2.0"
description = "A rust library for creating Hal representations of resources, based on serde"
documentation = "http://rustic-hal.duvalsoft.org/rustic_hal/"
homepage = "http://rustic-hal.duvalsoft.org/rustic_hal/"
repository = "https://github.com/pduval/rustic_hal"
build = "build.rs"
edition = "2018"

[features]
axumweb = ["axum", "futures", "futures-core", "futures-util"]
actix = ["actix-web", "futures"]
warp-reply = ["warp", "http"]

[lib]
name = "rustic_hal"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = { version = "4.0.0-rc.3", optional = true }
warp = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }
axum = { version = "0.6", optional = true }
futures-core={ version = "0.3", optional = true }
futures-util={ version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "simple_serialisation"
harness = false
